--- a/main.html
+++ b/main.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
+    <table>
       <!-- Your code here -->
 		<tr>
-			<td colspan="0">
+			<td>
 				<table>
 				<tr>
 					<th colspan="2">Nested Table 2</th>
