--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table>
+    <table style="width:100%; height:100%">
       <!-- Your code here -->
 		<tr>
 			<td>
