--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
 						<th>Nested Table 4</th>
 				</tr>
 				<tr>
-					<td id="bg-check" style="background-color: black; color: white">HTML</td>
+					<td style="background-color: black; color: white">HTML</td>
 				</tr>
 				</table>
 			</td>
