--- a/main.html
+++ b/main.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width:100%; height:100%">
+    <table border="1">
       <!-- Your code here -->
 		<tr>
 			<td>
-				<table>
+				<table border="1" alignment="center">
 				<tr>
 					<th colspan="2">Nested Table 2</th>
 				</tr>
@@ -27,7 +27,7 @@
 			</td>
 		
 			<td>
-				<table>
+				<table border="1">
 				<tr>
 					<th>Nested Table 1</th>
 				</tr>
@@ -46,9 +46,9 @@
 		
 		<tr>
 			<td>
-				<table>
+				<table border="1">
 				<tr>
-					<th colspan="2">Nested Table 3</th>
+					<th colspan="2" align="center">Nested Table 3</th>
 				</tr>
 				<tr>
 					<td href="">Nested Table</td>
@@ -58,12 +58,12 @@
 			</td>
 		
 			<td>
-				<table>
+				<table border="1">
 				<tr>
 						<th>Nested Table 4</th>
 				</tr>
 				<tr>
-					<td style="background-color: black; color: white">HTML</td>
+					<td style="background-color: black; color:  aliceblue;">HTML</td>
 				</tr>
 				</table>
 			</td>
