--- a/main.html
+++ b/main.html
@@ -1,73 +1,66 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <table border="1">
+<tr>
+ <td>
+  <table border="1" alignment="center">
+    <tr>
+    <th colspan="2">Nested table 2</th>
+</tr>
+<tr>
+    <th>Column 1</th>
+    <th>Column 2</th>
+</tr>
+<tr>
+    <td>abc</td>
+    <td>def</td>
+</tr>
+</table>
+ </td>
+ <td>
+  <table border="1">
+    <tr>
+        <th>Nested Table 1</th>
+    </tr>
+    <tr>
+        <td>
+            <ul>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+            </ul>
+        </td>
+    </tr>
+
+</table>
+ </td>
+</tr>
+<tr>
+  <td>
     <table border="1">
-      <!-- Your code here -->
-		<tr>
-			<td>
-				<table border="1" alignment="center">
-				<tr>
-					<th colspan="2">Nested Table 2</th>
-				</tr>
-				<tr>
-					<th>Column 1</th>
-					<th>Column 2</th>
-				</tr>
-				<tbody>
-					<td>abc</td>
-					<td>def</td>
-				</tbody>
-				</table>
-			</td>
-		
-			<td>
-				<table border="1">
-				<tr>
-					<th>Nested Table 1</th>
-				</tr>
-				<tr>
-					<td>
-						<ul>
-						  <li>List item</li>
-						  <li>List item</li>
-						  <li>List item</li>
-						</ul> 
-					</td>
-				</tr>
-				</table>
-			</td>
-		</tr>
-		
-		<tr>
-			<td>
-				<table border="1">
-				<tr>
-					<th colspan="2" align="center">Nested Table 3</th>
-				</tr>
-				<tr>
-					<td href="">Nested Table</td>
-					<td>Demo Continued</td>
-				</tr>
-				</table>
-			</td>
-		
-			<td>
-				<table border="1">
-				<tr>
-						<th>Nested Table 4</th>
-				</tr>
-				<tr>
-					<td style="background-color: black; color:  aliceblue;">HTML</td>
-				</tr>
-				</table>
-			</td>
-		</tr>
+      <tr>
+        <th colspan="2" align="center">Nested Table 3</th>
+      </tr>
+      <tr>
+        <td> <a href=""> Nested table </a></td>
+          <td>Demo Continued</td>
+      </tr>
     </table>
-  </body>
+  </td>
+  <td>
+    <table border="1" >
+      <tr><th>Nested Table 4</th></tr>
+      <tr>
+      <td style="background-color: black;color: aliceblue;">HTML</td>
+    </tr>
+    </table>
+  </td>
+  </table>
+</body>
 </html>
