--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
 					<th colspan="2">Nested Table 3</th>
 				</tr>
 				<tr>
-					<td href="">Nested Table</td>
+					<td><u>Nested Table</u</td>
 					<td>Demo Continued</td>
 				</tr>
 				</table>
